<resources>
    <string name="app_name">Term Tracker</string>
    <string name="add_sample_data">Add Sample Data</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_term_detail">Term Detail</string>
    <string name="hint_term_name">Tap here to enter term name.</string>
    <string name="delete_all">Delete All Terms</string>
    <string name="new_term">New Term</string>
    <string name="edit_term">Edit Term Details</string>
    <string name="delete_term">Delete Term</string>
    <string name="see_courses">See/Edit Courses</string>
    <string name="course_list">Course List</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="course_name">Course Name:</string>
    <string name="proj_end_date">Proj. End Date:</string>
    <string name="click_to_enter_date">Click to Enter Date</string>
    <string name="course_status">Course Status:</string>
    <string name="click_to_select_status">Click to Select Status</string>
    <string name="course_mentor">Course Mentor:</string>
    <string name="enter_mentor_name">Enter Mentor Name</string>
    <string name="mentor_phone">Mentor Phone:</string>
    <string name="enter_mentor_phone_number">Enter Mentor Phone Number</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="enter_mentor_email">Enter Mentor Email</string>
    <string name="course_detail">Course Detail</string>
    <string name="delete_all_courses">Delete All Courses</string>
    <string name="new_course">New Course</string>
    <string name="edit_course_details">Edit Course Details</string>
    <string name="delete_course">Delete Course</string>
    <string name="start_date">Start Date:</string>
    <string name="see_edit_course_notes">See/Edit Course Notes</string>
    <string name="see_edit_assessments">See/Edit Assessments</string>
    <string name="course_start_date_date">Course Start Date: Date</string>
    <string name="projected_end_date_date">Projected End Date: Date</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="goal_date_date">Goal Date: Date</string>
    <string name="due_date_date">Due Date: Date</string>
    <string name="assessment_list">Assessment List</string>
    <string name="assessment_name_label">Assessment Name:</string>
    <string name="tap_to_enter_assessment_name">Tap to enter assessment name.</string>
    <string name="goal_date_label">Goal Date:</string>
    <string name="due_date_label">Due Date:</string>
    <string name="tap_here_to_set_the_due_date">Tap here to set the due date.</string>
    <string name="assessment_detail">Assessment Detail</string>
    <string name="delete_all_assessments">Delete All Assessments</string>
    <string name="new_assessment">New Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="notes_list">Notes List</string>
    <string name="enter_note_title">Enter note title.</string>
    <string name="enter_note_text">Enter note text...</string>
    <string name="note_detail">Note Detail</string>
    <string name="add_sample_notes">Add Sample Notes</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="edit_note">Edit Note</string>
    <string name="new_note">New Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="error_term_contains_classes">This term currently contains classes and cannot be deleted. To delete this term, please delete the classes from the term first.</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="course_reminders_notification_channel_name">Course Reminders</string>
    <string name="course_reminders_notification_channel_description">Notification Channel for Courser Reminders from WGU Student Term Tracker</string>
    <string name="course_starting">Course Starting</string>
    <string name="course_tracker_notification_channel_id">course_tracker_notification_channel_id</string>
    <string name="course_starting_today">Course Starting Today</string>
    <string name="course_ending_today">Course Ending Today</string>
    <string name="assessment_tracker_notification_channel_id">assessment_tracker_notification_channel_id</string>
    <string name="assessment_tracker_notification_channel_description">Notification Channel for Assesment Reminders from WGU Student Term Tracker</string>
    <string name="assessment_tracker_notification_channel_name">Assessment Reminders</string>
    <string name="error_complete_course_details">Please complete all fields before adding assessments or notes.</string>
    <string name="error_complete_term_details">Please complete the details for the term before adding courses.</string>
    <string name="assessment_type_label">Assessment Type:</string>
    <string name="assessment_type">Assessment Type</string>
</resources>
