<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/subview_assessment_detail"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AssessmentDetailActivity"
    tools:showIn="@layout/assessment_detail_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >

        <TextView
            android:layout_width="@dimen/assessment_detail_label_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assessment_name_label"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:layout_marginLeft="@dimen/list_text_margin_horizontal"
            android:layout_marginRight="@dimen/detail_text_margin"
            android:layout_marginVertical="@dimen/detail_text_margin"
            android:textSize="@dimen/list_text_size"
            android:textFontWeight="1000"
            android:textColor="@color/list_text_color" />

        <EditText
            android:id="@+id/assesment_detail_title_text_view"
            android:layout_width="@dimen/assessment_detail_field_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tap_to_enter_assessment_name"
            android:layout_marginLeft="@dimen/detail_text_margin"
            android:layout_marginRight="@dimen/list_text_margin_horizontal"
            android:layout_marginVertical="@dimen/detail_text_margin"
            android:textSize="@dimen/detail_text_size"
            android:textFontWeight="1000"
            android:textColor="@color/list_text_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >

        <TextView
            android:layout_width="@dimen/assessment_detail_label_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal_date_label"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:layout_marginLeft="@dimen/list_text_margin_horizontal"
            android:layout_marginRight="@dimen/detail_text_margin"
            android:layout_marginVertical="@dimen/detail_text_margin"
            android:textSize="@dimen/list_text_size"
            android:textFontWeight="1000"
            android:textColor="@color/list_text_color" />

        <TextView
            android:id="@+id/assessment_detail_goal_text_view"
            android:layout_width="@dimen/assessment_detail_field_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:hint="Tap here to set the goal date."
            android:layout_marginLeft="@dimen/detail_text_margin"
            android:layout_marginRight="@dimen/list_text_margin_horizontal"
            android:layout_marginVertical="@dimen/detail_text_margin"
            android:textSize="@dimen/detail_text_size"
            android:textFontWeight="1000"
            android:textColor="@color/list_text_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >

        <TextView
            android:layout_width="@dimen/assessment_detail_label_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/due_date_label"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:layout_marginLeft="@dimen/list_text_margin_horizontal"
            android:layout_marginRight="@dimen/detail_text_margin"
            android:layout_marginVertical="@dimen/detail_text_margin"
            android:textSize="@dimen/list_text_size"
            android:textFontWeight="1000"
            android:textColor="@color/list_text_color" />

        <TextView
            android:id="@+id/assessment_detail_due_date_text_view"
            android:layout_width="@dimen/assessment_detail_field_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:hint="@string/tap_here_to_set_the_due_date"
            android:layout_marginLeft="@dimen/detail_text_margin"
            android:layout_marginRight="@dimen/list_text_margin_horizontal"
            android:layout_marginVertical="@dimen/detail_text_margin"
            android:textSize="@dimen/detail_text_size"
            android:textFontWeight="1000"
            android:textColor="@color/list_text_color" />

    </LinearLayout>
</LinearLayout>